<resources>
    <string name="app_name">NavigationViewExample</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <string name="title_home">Home</string>
    <string name="title_bookmarks">Bookmarks</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_payment">Payment</string>
    <string name="title_settings">Settings</string>

    <string name="title_name">Hi Guna</string>
</resources>
